[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.8"
arraytools = "0.1"
rayon = "1.3"
packed_simd = "0.3"
num = "0.2"
typenum = "1.11"

[dev-dependencies]
criterion = "0.3"
assert_matches = "1.3"

[[bench]]
name = "aoc-2019-bench"
harness = false

[[bin]]
name = "solutions"
path = "solutions/main.rs"

[profile.release]
panic = "abort"
